# moon_explore_challenge

./: .gitignore  LICENSE  README.md  package.xml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ROS2_CI.yml
moon_explore/hybrid_a_star/: dynamic_programming_heuristic.py  hybrid_a_star_planner.py  reeds_shepp_path_planning.py  rs_patterns.py  rs_planning.py  rs_precompute.py  utils.py
moon_explore_challenge/: hybrid_a_star_planner.py  rs_patterns.py  rs_planning.py  utils.py
path_msg/: CMakeLists.txt  package.xml
path_msgs/: CMakeLists.txt  README.md  package.xml
path_msgs/msg/: CandidatePose2D.msg  HPath.msg
path_msgs/srv/: ExplorePlanning.srv  GenerateTemplatePath.srv  PathPlanning.srv
path_planner/: README.md  package.xml  requirements-dev.txt  setup.py
path_planner/path_planner/: __init__.py  dynamic_programming_heuristic.py  exploration_planner.py  hpath_viz_node.py  hybrid_a_star_map.py  hybrid_a_star_path.py  hybrid_a_star_planner.py  path_planner_node.py  rs_patterns.py  rs_planning.py  test_planner_node.py  utils.py
path_planner/path_planner/node/: path_planner_node.py  test_planner_node.py
path_planner/plot/: animated_models.py  animated_planner.py  plot_edf.py  plot_explore_plan.py  plot_some_path.py  plot_utils.py  visualize_plan.py
path_planner/preprocess/: rs_precompute.py
path_planner/resource/: elevation_map.txt  map_passable.npy  map_raw.txt  map_truth.npy
path_planner/test/: guided_filter_time.py  halton_sampler_time.py  plot_ros_elva_ map.py  test_offline_path.py  test_reeds_shepp_path_planning.py
plot/: plot_utils.py
preprocess/: rs_precompute.py
test/: conftest.py  test_reeds_shepp_path_planning.py
transfer/: rs_planning_onefile.py
