<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>path_planner</name>
  <version>0.1.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1830979240@qq.com">yyy</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>path_msg</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>